--- a/5-2/index.html
+++ b/5-2/index.html
@@ -2,21 +2,14 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>5-1</title>
+    <title>5-2</title>
     <script src="jquery-3.6.0.min.js"></script>
     <script src="javascript.js"></script>
 </head>
 <body>
-  <h1>クリック系イベント</h1>
-
-  <input id="addlibtn" type="button" value="liを追加">
-  <input id="prependlibtn" type="button" value="liを前に追加">
- 
-  <ul id="ul5-1">
-      <li id="id5-1_1">id は id5-1_1 です</li>
-      <li id="id5-1_2">id は id5-1_2 です</li>
-      <li id="id5-1_3">id は id5-1_3 です</li>
-      <li id="id5-1_4">id は id5-1_4 です</li>
-    </ul>
+  <h1 id="color1">マウスオーバ系イベント1 青</h1>
+  <h1 id="color2">マウスオーバ系イベント2 赤</h1> 
+  <h1 id="color3">マウスオーバ系イベント3 黄</h1>
+  <h1 id="color4">マウスオーバ系イベント4 緑</h1>
 </body>
 </html>
