[mod]4-3まで教材込みで完了

--- a/5-4/index.html
+++ b/5-4/index.html
@@ -13,8 +13,7 @@
 </head>
 <body>
   <a href="images/osaka-castle.jpg" data-lightbox="osaka-castle" data-title="大阪城">
-    <img id="sampleimg" src="images/osaka-castle.jpg" alt="大阪城">
-  </a>
-  
+    <img src="images/osaka-castle.jpg" alt="大阪城">
+  </a>  
 </body>
 </html>
