--- a/4-1/index.html
+++ b/4-1/index.html
@@ -7,7 +7,8 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <h1 id="h1a">使ってみよう！jQuery 基本1 h1-a</h1>    
-    <h1 id="h1b">使ってみよう！jQuery 基本1 h1-b</h1>    
+    <h1 id="h1a">使ってみよう！jQuery 基本1 h1-a</h1>
+    <h1 id="h1b">使ってみよう！jQuery 基本1 h1-b</h1>
+    <h1 id="h1c">使ってみよう！jQuery 基本1 h1-c</h1>
 </body>
 </html>
