[mod]ざんていかんせい

--- a/complete/5-1/index.html
+++ b/complete/5-1/index.html
@@ -9,9 +9,11 @@
 <body>
   <h1>クリック系イベント</h1>
 
-  <input id="addlibtn" type="button" value="liを追加">
-  <input id="prependlibtn" type="button" value="liを前に追加">
- 
+  <input id="addlibtn" type="button" value="liを末尾に追加">
+  <input id="prependlibtn" type="button" value="liを先頭に追加">
+  <input id="dellastlibtn" type="button" value="liの末尾を削除">
+  <input id="delfirstlibtn" type="button" value="liの先頭を削除">
+  
   <ul id="ul5-1">
       <li id="id5-1_1">id は id5-1_1 です</li>
       <li id="id5-1_2">id は id5-1_2 です</li>
