--- a/complete/5-2/index.html
+++ b/complete/5-2/index.html
@@ -11,5 +11,6 @@
   <h1 id="color2">マウスオーバ系イベント2 赤</h1> 
   <h1 id="color3">マウスオーバ系イベント3 黄</h1>
   <h1 id="color4">マウスオーバ系イベント4 緑</h1>
+  <h1 id="color5">マウスオーバ系イベント5 紫</h1>
 </body>
 </html>
